# dde-dock

./: .clog.toml  .gerrit_sources_list  .gerrit_sources_list.txt  .gitignore  .gitlab-ci.yml  .gitreview  .mailmap  .packit.yaml  .project  .transifexrc  .travis.yml  CHANGELOG.md  CMakeLists.txt  HACKING.md  Makefile  README.md  README.zh_CN.md  Sconstruct  daemon.go  dde-dock-bundle.pro  dde-dock.pc  dde-dock.pc.in  dde-dock.pro  dde-workspace-2015.pro  gen_report.sh  limit.cpp  loader.go  lupdate.sh  main.cpp  makefile  technology-overview.md  test  test1.cpp
frame/: CMakeLists.txt  com.deepin.dde.Dock.service  com.deepin.dde.dock.service  environments.h.in  frame.pro  frame.qrc  main.cpp
frame/accessible/: accessible.h  accessibledefine.h
frame/controller/: dockitemcontroller.cpp  dockitemcontroller.h  dockitemmanager.cpp  dockitemmanager.h  dockpluginloader.cpp  dockpluginloader.h  dockpluginscontroller.cpp  dockpluginscontroller.h  fixedplugincontroller.cpp  fixedplugincontroller.h  multiwindowhelper.cpp  multiwindowhelper.h  proxyplugincontroller.cpp  proxyplugincontroller.h  quicksettingcontroller.cpp  quicksettingcontroller.h  recentapphelper.cpp  recentapphelper.h  systemplugincontroller.cpp  systemplugincontroller.h  toolapphelper.cpp  toolapphelper.h
frame/dbus/: dbusdisplay.cpp  dbusdisplay.h  dbusdock.h  dbusdockadaptors.cpp  dbusdockadaptors.h  dbusdockentry.h  dbusmenu.cpp  dbusmenu.h  dbusmenumanager.cpp  dbusmenumanager.h  dbusxmousearea.cpp  dbusxmousearea.h  dockdaemonadaptors.cpp  dockdaemonadaptors.h  dockinterface.cpp  dockinterface.h  entryinterface.cpp  entryinterface.h  org.deepin.dde.daemon.Dock1.xml
frame/display/: displaymanager.cpp  displaymanager.h
frame/drag/: quickdragcore.cpp  quickdragcore.h
frame/item/: appitem.cpp  appitem.h  appmultiitem.cpp  appmultiitem.h  containeritem.cpp  containeritem.h  dockitem.cpp  dockitem.h  item.qrc  itemconsts.h  launcheritem.cpp  launcheritem.h  overflowitem.cpp  overflowitem.h  placeholderitem.cpp  placeholderitem.h  pluginsitem.cpp  pluginsitem.h  quicksettingitem.cpp  quicksettingitem.h  resources.qrc  showdesktopitem.cpp  showdesktopitem.h  stretchitem.cpp  stretchitem.h  systemtraypluginitem.cpp  systemtraypluginitem.h  tipswidget.cpp  tipswidget.h  traypluginitem.cpp  traypluginitem.h  workspaceitem.cpp  workspaceitem.h
frame/mockinterface/: qgsettingsinterface.h  qgsettingsinterfaceimpl.cpp  qgsettingsinterfaceimpl.h  qgsettingsinterfacemock.cpp  qgsettingsinterfacemock.h
frame/model/: brightnessmodel.cpp  brightnessmodel.h  collaborationdevmodel.cpp  collaborationdevmodel.h  mediaplayermodel.cpp  mediaplayermodel.h  volumemodel.cpp  volumemodel.h
frame/panel/: mainpanel.cpp  mainpanel.h  mainpanelcontrol.cpp  mainpanelcontrol.h
frame/pluginadapter/: pluginadapter.cpp  pluginadapter.h  pluginsiteminterface_v20.h
frame/qtdbusextended/: dbusextendedabstractinterface.cpp  dbusextendedabstractinterface.h
frame/screenspliter/: screenspliter.cpp  screenspliter.h  screenspliter_wayland.cpp  screenspliter_wayland.h  screenspliter_xcb.cpp  screenspliter_xcb.h
frame/taskmanager/: appinfo.cpp  appinfo.h  appmenu.cpp  appmenu.h  bamfdesktop.cpp  bamfdesktop.h  common.h  dbushandler.cpp  dbushandler.h  desktopinfo.cpp  desktopinfo.h  entries.cpp  entries.h  entry.cpp  entry.h  processinfo.cpp  processinfo.h  taskmanager.cpp  taskmanager.h  waylandmanager.cpp  waylandmanager.h  window_patterns.json  windowidentify.cpp  windowidentify.h  windowinfobase.h  windowinfok.cpp  windowinfok.h  windowinfomap.cpp  windowinfomap.h  windowinfox.cpp  windowinfox.h  windowpatterns.cpp  windowpatterns.h  x11manager.cpp  x11manager.h  xcbutils.cpp  xcbutils.h
frame/util/: abstractpluginscontroller.cpp  abstractpluginscontroller.h  common.h  customevent.cpp  customevent.h  dbusutil.h  dockapplication.cpp  dockapplication.h  dockpopupwindow.cpp  dockpopupwindow.h  dockscreen.cpp  dockscreen.h  docksettings.cpp  docksettings.h  horizontalseperator.cpp  horizontalseperator.h  imagefactory.cpp  imagefactory.h  imageutil.cpp  imageutil.h  menudialog.cpp  menudialog.h  menuworker.cpp  menuworker.h  monitor.cpp  monitor.h  multiscreenworker.cpp  multiscreenworker.h  platformutils.cpp  platformutils.h  pluginloader.cpp  pluginloader.h  settingconfig.cpp  settingconfig.h  settings.cpp  settings.h  singleton.h  statebutton.cpp  statebutton.h  themeappicon.cpp  (+4 more)
frame/window/: accessible.cpp  accessible.h  accessibledefine.h  appeditdialog.cpp  appeditdialog.h  docktraywindow.cpp  docktraywindow.h  mainpanelcontrol.cpp  mainpanelcontrol.h  mainwindow.cpp  mainwindow.h  mainwindowbase.cpp  mainwindowbase.h  pluginchildpage.cpp  pluginchildpage.h  quickpluginmodel.cpp  quickpluginmodel.h  quickpluginwindow.cpp  quickpluginwindow.h  quicksettingcontainer.cpp  quicksettingcontainer.h  systempluginwindow.cpp  systempluginwindow.h  traymainwindow.cpp  traymainwindow.h  traymanagerwindow.cpp  traymanagerwindow.h  windowmanager.cpp  windowmanager.h
frame/xcb/: xcb_misc.cpp  xcb_misc.h
plugins/: CMakeLists.txt  plugins.pro
plugins/airplane-mode/: CMakeLists.txt  airplanemode.json  airplanemodeapplet.cpp  airplanemodeapplet.h  airplanemodeitem.cpp  airplanemodeitem.h  airplanemodeplugin.cpp  airplanemodeplugin.h
plugins/bluetooth/: CMakeLists.txt  bloothadapterwidget.cpp  bloothadapterwidget.h  bluetooth.json  bluetoothapplet.cpp  bluetoothapplet.h  bluetoothitem.cpp  bluetoothitem.h  bluetoothmainwidget.cpp  bluetoothmainwidget.h  bluetoothplugin.cpp  bluetoothplugin.h  bluetoothwidget.cpp  bluetoothwidget.h
plugins/datetime/: CMakeLists.txt  datetime.json  datetime.pro  datetime.qrc  datetimeitem.h  (+8 more)
tests/: CMakeLists.txt  main.cpp  test-recoverage.sh  ut_appdrag.cpp  ut_appdragwidget.cpp  ut_appitem.cpp  ut_appsnapshot.cpp  ut_dockitem.cpp  ut_dockitemmanager.cpp  ut_floatingpreview.cpp  ut_hoverhighlighteffect.cpp  ut_launcheritem.cpp  ut_main.cpp  ut_multiscreenworker.cpp  ut_placeholderitem.cpp  ut_res.qrc  ut_statebutton.cpp
unittest/: CMakeLists.txt  dock_unit_test.cpp  dock_unit_test.h  main.cpp  test_monitor.cpp
(+3695 files in other folders)
