
add_subdirectory("datetime")
#add_subdirectory("disk-mount")
if (NOT (${CMAKE_BUILD_TYPE} MATCHES "Debug"))
    add_subdirectory("network")
else()
    add_subdirectory("new-network")
endif ()
add_subdirectory("shutdown")
add_subdirectory("sound")
add_subdirectory("system-tray")
#add_subdirectory("trash")
add_subdirectory("keyboard-layout")
